[gd_scene load_steps=8 format=3 uid="uid://bhyhsvivo3vqy"]

[ext_resource type="PackedScene" uid="uid://cpqopqy873vp4" path="res://scenes/fox.tscn" id="1_t2hor"]
[ext_resource type="Script" path="res://scenes/world.gd" id="1_y0ffe"]
[ext_resource type="Texture2D" uid="uid://dvukf8pohr2dr" path="res://icon.svg" id="3_sr83k"]
[ext_resource type="PackedScene" uid="uid://bodqnqhpfxq40" path="res://scenes/Levels/level_1.tscn" id="4_ukp2y"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_dqywx"]
sky_top_color = Color(0.225408, 0.603492, 0.701855, 1)
sky_horizon_color = Color(0.605315, 0.434238, 0.395122, 1)
sky_curve = 0.184672
ground_bottom_color = Color(0.0504121, 0.183771, 0.200734, 1)
ground_horizon_color = Color(0.497303, 0.329581, 0.457298, 1)
ground_curve = 0.0273208
sun_angle_max = 0.0
sun_curve = 0.160766

[sub_resource type="Sky" id="Sky_dun7p"]
sky_material = SubResource("ProceduralSkyMaterial_dqywx")

[sub_resource type="Environment" id="Environment_fp8kq"]
background_mode = 2
background_color = Color(0.66704, 0.730931, 0.858291, 1)
sky = SubResource("Sky_dun7p")
ambient_light_source = 3

[node name="World" type="Node"]
script = ExtResource("1_y0ffe")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_fp8kq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.40833, 0.912834, 0, -0.912834, -0.40833, 7.18302, 63.4981, -70.7861)
light_color = Color(0.843137, 0.705882, 0.145098, 1)
light_energy = 2.0

[node name="PLACEHOLDERS!" type="Node3D" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="PLACEHOLDERS!"]
transform = Transform3D(5000, 0, 0, 0, -0.000218557, -5000, 0, 5000, -0.000218557, 0, -40, 0)
texture = ExtResource("3_sr83k")

[node name="Bullets" type="Node3D" parent="."]

[node name="RailCart" type="Node3D" parent="."]

[node name="Fox" parent="RailCart" instance=ExtResource("1_t2hor")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.93837, 0, 0)

[node name="CameraHolder" type="Node3D" parent="RailCart"]

[node name="Camera3D" type="Camera3D" parent="RailCart/CameraHolder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50)

[node name="Level1" parent="." instance=ExtResource("4_ukp2y")]

[node name="PathFollow3D" parent="Level1/Path3D" index="0"]
transform = Transform3D(-0.788429, -0.0972491, -0.60739, 0, 0.987427, -0.158096, 0.615126, -0.124648, -0.778514, 0.704703, 0.141301, 0.209516)
rotation_mode = 4

[connection signal="fire" from="RailCart/Fox" to="." method="_on_fox_fire"]

[editable path="Level1"]
